<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thumbnail_Image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostCourse">




    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/postToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorCard" />

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postToolbar"
        app:srcCompat="@drawable/thumbnail_user" />

    <ImageView
        android:id="@+id/rep_img_post"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/add_img_icon"
        app:layout_constraintBottom_toBottomOf="@+id/post_image"
        app:layout_constraintEnd_toEndOf="@+id/post_image"
        app:layout_constraintStart_toStartOf="@+id/post_image"
        app:layout_constraintTop_toBottomOf="@+id/postToolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:elevation="7dp"
        android:text="@string/postTxt"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkText"></com.google.android.material.button.MaterialButton>

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addDescription"
        android:inputType="textMultiLine"
        android:maxLength="@integer/description_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_image" />

    <EditText
        android:id="@+id/linkText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addLink"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="7dp"
        app:itemIconTint="@color/bottom_navigation_colors"
        app:itemTextColor="@color/bottom_navigation_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_content"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>